@@ -1655,6 +1655,9 @@ unsigned int CocoaKeyToVLC( unichar i_key )
 
 - (void)setWindowLevel:(NSNumber*)state
 {
+    if( config_GetInt( p_intf, "macosx-background" ) )
+        return;
+
     if ([state unsignedIntValue] & VOUT_WINDOW_STATE_ABOVE)
         [[[[VLCMainWindow sharedInstance] videoView] window] setLevel: NSStatusWindowLevel];
     else
