@@ -58,6 +58,7 @@ Mac OS X Interface:
  * added an option to hide the shuffle and repeat buttons
  * added optional playlist columns for track number, genre, album, description,
    date and language.
+ * add an option to play videos as a desktop background
 
 Removed modules:
  * portaudio audio output
